# Lagrange-Interpolation-Canvas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Canvas.hpp  Interpolator.hpp
src/: Canvas.cpp  Interpolator.cpp  main.cpp
